split "if", "switch" and "synchronized" from "root" and "sequence"